--- a/app.json
+++ b/app.json
@@ -1,11 +1,22 @@
 {
   "expo": {
-    "name": "vueltaAlMenuEn365Platos",
-    "slug": "vueltaAlMenuEn365Platos",
+    "name": "frontend-mobile",
+    "slug": "frontend-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "custom photos permission",
+          "cameraPermission": "Allow $(PRODUCT_NAME) to open the camera",
+          "//": "Disables the microphone permission",
+          "microphonePermission": false
+        }
+      ]
+    ],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
