--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-flash-message": "^0.4.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-picker": "^7.1.2",
     "react-navigator": "^0.0.0-0",
     "typescript": "^5.3.0",
     "yup": "^1.4.0"
