--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend-mobile",
+  "name": "dsm_thomas_chapa",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,29 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-masked-view/masked-view": "0.3.1",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.3.29",
-    "@types/react": "~18.2.79",
-    "axios": "^1.6.8",
-    "expo": "~51.0.7",
-    "expo-image-picker": "~15.0.5",
+    "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
-    "mime": "^4.0.3",
     "react": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-dotenv": "^3.4.11",
-    "react-native-flash-message": "^0.4.2",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "typescript": "~5.3.3",
-    "yup": "^1.4.0"
+    "react-native": "0.74.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
