--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "expo": "~51.0.8",
+    "expo-image-picker": "^15.0.5",
     "expo-status-bar": "~1.12.1",
+    "mime": "^4.0.3",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-safe-area-context": "4.10.1",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/mime": "^4.0.0",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
