--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "expo": "~51.0.8",
-    "expo-image-picker": "~13.3.1",
+    "expo-image-picker": "^15.0.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
