--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~51.0.8",
     "expo-image-picker": "^15.0.5",
     "expo-status-bar": "~1.12.1",
+    "mobx-react": "^9.1.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-safe-area-context": "4.10.1",
