--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vueltaalmenuen365platos",
+  "name": "dsm_thomas_chapa",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,25 +11,29 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "axios": "^1.6.8",
-    "expo": "~50.0.14",
-    "expo-image-picker": "~14.7.1",
-    "expo-status-bar": "~1.11.1",
+    "axios": "^1.7.2",
+    "expo": "~51.0.8",
+    "expo-image-picker": "^15.0.5",
+    "expo-status-bar": "~1.12.1",
+    "mobx-react": "^9.1.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-async-storage": "^0.0.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-flash-message": "^0.4.2",
     "react-native-fs": "^2.20.0",
-    "react-native-image-picker": "^7.1.2",
     "react-navigator": "^0.0.0-0",
-    "typescript": "^5.3.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.1"
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3"
+
   },
   "private": true
 }
