--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "axios": "^1.7.2",
     "expo": "~51.0.10",
     "expo-image-picker": "^15.0.5",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "mime": "^4.0.3",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "1.14.0",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
