Revert "reset to b38eb54883788a529a4b1107404fab80abddbac1"

--- a/app.json
+++ b/app.json
@@ -1,28 +1,19 @@
 {
   "expo": {
-    "name": "DSM_Thomas_Chapa",
-    "slug": "DSM_Thomas_Chapa",
+    "name": "vueltaAlMenuEn365Platos",
+    "slug": "vueltaAlMenuEn365Platos",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "plugins": [
-      [
-        "expo-image-picker",
-        {
-          "photosPermission": "custom photos permission",
-          "cameraPermission": "Allow $(PRODUCT_NAME) to open the camera",
-
-          "//": "Disables the microphone permission",
-          "microphonePermission": false
-        }
-      ]
-    ],
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
