--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "dsm_thomas_chapa",
-  "name": "dsm_thomas_chapa",
+  "name": "vueltaalmenuen365platos",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
-  "main": "expo/AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -14,24 +12,19 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "~50.0.19",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native": "0.74.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native": "0.73.6",
     "react-native-async-storage": "^0.0.1",
     "react-native-flash-message": "^0.4.2",
     "react-native-fs": "^2.20.0",
+    "react-native-image-picker": "^7.1.2",
     "react-navigator": "^0.0.0-0",
+    "typescript": "^5.3.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
