--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
     "react-navigator": "^0.0.0-0",
+    "react-responsive-carousel": "^3.2.23",
     "typescript": "^5.3.0",
     "yup": "^1.4.0"
   },
