chore(deps) update expo packages

--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "expo": "^51.0.14",
-    "expo-image-picker": "~14.7.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.17",
+    "expo-image-picker": "~15.0.6",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.2",
     "react-native-async-storage": "^0.0.1",
     "react-native-flash-message": "^0.4.2",
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
     "react-navigator": "^0.0.0-0",
     "react-responsive-carousel": "^3.2.23",
-    "typescript": "^5.3.0",
+    "typescript": "~5.3.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
