--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
+    "eslint-config-prettier": "^9.1.0",
     "expo": "^51.0.14",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
@@ -31,7 +33,11 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.3",
     "metro-react-native-babel-preset": "^0.77.0",
+    "prettier": "3.3.2",
     "react-native-dotenv": "^3.4.11"
   },
   "private": true
